# sql-query-env

./: .gitignore  Dockerfile  README.md  client.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml
data/: schema.sql
server/: app.py  environment.py  main.py  models.py
server/tasks/: definitions.py  grader.py
tests/: test_client.py  test_inference.py
