[project]
name = "openenv-hackathon"
version = "0.1.0"
description = "SQL Query Training Environment for OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "openenv-core>=0.2.1",
    "openai>=1.65",
    "httpx>=0.28",
]

[project.scripts]
serve = "server.main:start"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
